# profile.wearable.platform.core.uifw.efl-ext

./: AUTHORS  CMakeLists.txt  LICENSE  efl-extension.manifest  efl-extension.pc.in
doc/: CMakeLists.txt  Doxyfile.in  efl_extension_doc.h
packaging/: efl-extension.spec
po/: CMakeLists.txt  ar.po  as.po  az.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el_GR.po  es_ES.po  et.po  fa.po  fr.po  gl.po  gu.po  he.po  hi.po  hu.po  hy.po  id.po  is.po  ja_JP.po  ka.po  kk.po  km.po  kn.po  ko_KR.po  lo.po  lt.po  lv.po  mk.po  ml.po  mn_MN.po  mr.po  nb.po  or.po  pa.po  ru_RU.po  (+12 more)
src/: CMakeLists.txt
src/include/: CMakeLists.txt  efl_extension.h  efl_extension.h.in  efl_extension_events.h  efl_extension_private.h
src/include/circle/: efl_extension_circle_object.h  efl_extension_circle_object_datetime.h  efl_extension_circle_object_genlist.h  efl_extension_circle_object_progressbar.h  efl_extension_circle_object_scroller.h  efl_extension_circle_object_slider.h  efl_extension_circle_object_spinner.h  efl_extension_circle_private.h  efl_extension_circle_surface.h  efl_extension_rotary.h
src/include/common/: efl_extension_common.h  efl_extension_common_private.h  efl_extension_index_layout.h  efl_extension_more_option.h  efl_extension_rotary_selector.h
src/lib/: CMakeLists.txt  efl_extension.c  efl_extension_events.c
src/lib/circle/: efl_extension_circle_object.c  efl_extension_circle_object_datetime.c  efl_extension_circle_object_genlist.c  efl_extension_circle_object_item.c  efl_extension_circle_object_progressbar.c  efl_extension_circle_object_scroller.c  efl_extension_circle_object_slider.c  efl_extension_circle_object_spinner.c  efl_extension_circle_surface.c  efl_extension_rotary.c
src/lib/common/: efl_extension_more_option.c  efl_extension_rotary_selector.c
